# project-sentinel

./: .gitignore  README.md  package.json  review.md
project-sentinel-js/: .gitignore  README.md  pnpm-lock.yaml
project-sentinel-js/src/: main.ts
project-sentinel-py/: README.md  main.py  pyproject.toml
src/: main.ts
