[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-sentinel-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.3.3",
]
[project.scripts]
sentinel = "main:main"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]
